--- a/css/style.css
+++ b/css/style.css
@@ -171,6 +171,19 @@ address {
   letter-spacing: 0.02em;
 }
 
+.site-nav .link.current::after {
+  content: '';
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 4px;
+  bottom: -1px;
+  left: 0;
+
+  border-radius: 2px;
+  background-color: var(--accent-color);
+}
+
 /* Применяем эффект ходор */
 
 /* .site-nav .link:hover,
@@ -193,7 +206,7 @@ address {
   margin-left: 50px;
 }
 
-.auth-nav .link {
+.header-contact {
   display: inline-flex;
   padding: 32px 0;
   align-items: center;
@@ -204,6 +217,10 @@ address {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
+
+  position: relative;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* .auth-nav .link:hover,
@@ -275,6 +292,8 @@ address {
   text-align: center;
   letter-spacing: 0.06em;
   cursor: pointer;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-button:hover,
@@ -359,6 +378,29 @@ address {
   margin-left: 30px;
 }
 
+.work-item {
+  position: relative;
+}
+
+.work-text {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  min-height: 70px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  font-weight: 700;
+  font-size: 14px;
+  line-height: calc(16 / 14);
+  text-transform: uppercase;
+  
+  color: var(--white-color);
+  background: rgba(47, 48, 58, 0.8);
+}
+
 .section-title {
   margin-bottom: 50px;
 
@@ -390,8 +432,6 @@ address {
 
   background-color: var(--white-color);
 }
-
-
 
 .team-workers {
   padding: 30px 0px;
@@ -439,6 +479,9 @@ address {
   border-radius: 50%;
 
   fill: var(--icon-color);
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-social-link:hover,
@@ -486,6 +529,9 @@ address {
   border-radius: 4px;
 
   fill: var(--icon-color);
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .client-link:hover,
@@ -531,6 +577,8 @@ address {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-mail:hover,
@@ -574,18 +622,19 @@ address {
 .footer-social-item {
   width: 44px;
   height: 44px;
-  
 }
 
 .footer-social-link {
   display: flex;
   justify-content: center;
   align-items: center;
-  
+
   width: 44px;
   height: 44px;
   border-radius: 50%;
   background: rgba(255, 255, 255, 0.1);
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-social-link:hover,
@@ -594,7 +643,6 @@ address {
 }
 
 .footer-social-icon {
-  
   fill: var(--white-color);
 }
 
@@ -637,6 +685,9 @@ address {
   text-align: center;
   letter-spacing: 0.03em;
   cursor: pointer;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .aktiv {
@@ -670,11 +721,15 @@ address {
 
 .portfolio-link {
   display: block;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-link:hover,
 .portfolio-link:focus {
-  background: #ffffff;
+  background-color: #ffffff;
   border: 1px solid #eeeeee;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
@@ -710,3 +765,6 @@ address {
   font-size: 16px;
   line-height: 1.88;
 }
+
+/* МОДАЛЬНОЕ ОКНО */
+
