--- a/css/style.css
+++ b/css/style.css
@@ -752,6 +752,7 @@ address {
 
 .portfolio-overlay {
   position: absolute;
+  
   top: 0;
   left: 0;
 
@@ -767,9 +768,15 @@ address {
 .portfolio-overlay-text {
   position: absolute;
   top: 0;
+  right: 0;
+  bottom: 0;
   left: 0;
 
-  padding: 63px 24px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  padding: 0 24px;
 
   font-size: 18px;
   line-height: calc(28 / 18);
@@ -849,3 +856,5 @@ address {
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
 }
+
+
